--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,12 @@ a {
     font-weight: bold;
 }
 
+.login-button {
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: 1rem;
+}
+
 .basket2 {
     display: none;
 }
