--- a/views/ipad.hbs
+++ b/views/ipad.hbs
@@ -14,7 +14,7 @@
                         <h3 class="name">Apple iPad 10,2" (2021) Wi-Fi + Cellular 256 ГБ, серый космос</h3>
                     </div>
                 </div>
-                <div class="row gy-3">
+                <div class="row gy-3 justify-content-center">
                     <div class="col-xl-6 col-12 text-center">
                         <img src="/img/ipad-more.jpg" width="400" alt="">
                     </div>
