--- a/views/macbook.hbs
+++ b/views/macbook.hbs
@@ -14,7 +14,7 @@
                         <h3 class="name">Apple MacBook Pro 16" 32 ГБ, 1 ТБ SSD, серебристый</h3>
                     </div>
                 </div>
-                <div class="row gy-3">
+                <div class="row gy-3 justify-content-center">
                     <div class="col-xl-6 col-12 text-center">
                         <img src="/img/mac-more.jpg" width="550" alt="">
                     </div>
