--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="index">
             <img src="/img/logo.png" alt="" width="50">
         </a>
-        <a class="navbar-brand menu-item" href="index"><span class="brand-name">Apple Market</span></a>
+        <a class="navbar-brand " href="index"><span class="brand-name menu-item">Apple Market</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
