--- a/views/iphone.hbs
+++ b/views/iphone.hbs
@@ -11,7 +11,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="name">Apple iPhone 13 Pro Max, 256ГБ, графитовый</h3>
+                        <!--<h3 class="name">Apple iPhone 13 Pro Max, 256ГБ, графитовый</h3>-->
+                        <h3 class="name">{{name}}</h3>
                     </div>
                 </div>
                 <div class="row gy-3 justify-content-center">
@@ -20,11 +21,13 @@
                     </div>
                     <div class="col-xl-6 col-12 text-phone row flex-column justify-content-between p-3 gy-3">
                         <p>
-                            Просто. Нереально. Дисплей Super Retina XDR с технологией ProMotion и быстрым, плавным откликом. Грандиозный апгрейд системы камер, открывающий совершенно новые возможности. Исключительная прочность. A15 Bionic — самый быстрый чип для iPhone. И впечатляющее время работы без подзарядки. Всё это Pro.
+                            {{description}}
+                            <!--Просто. Нереально. Дисплей Super Retina XDR с технологией ProMotion и быстрым, плавным откликом. Грандиозный апгрейд системы камер, открывающий совершенно новые возможности. Исключительная прочность. A15 Bionic — самый быстрый чип для iPhone. И впечатляющее время работы без подзарядки. Всё это Pro.-->
                         </p>
                         <div class="row">
                             <div class="col-6">
-                                <h3>100500 ₽</h3>
+                                <!--<h3>100500 ₽</h3>-->
+                                <h3>{{price}} ₽</h3>
                             </div>
                             <div class="col-6">
                                 <button type="button" class="btn btn-success float-end buy">Купить</button>
