--- a/views/ipad.hbs
+++ b/views/ipad.hbs
@@ -11,7 +11,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="name">Apple iPad 10,2" (2021) Wi-Fi + Cellular 256 ГБ, серый космос</h3>
+                        <!--<h3 class="name">Apple iPad 10,2" (2021) Wi-Fi + Cellular 256 ГБ, серый космос</h3>-->
+                        <h3 class="name">{{name}}</h3>
                     </div>
                 </div>
                 <div class="row gy-3 justify-content-center">
@@ -19,12 +20,14 @@
                         <img src="/img/ipad-more.jpg" width="400" alt="">
                     </div>
                     <div class="col-xl-6 col-12 text-phone row flex-column justify-content-between p-3 gy-3">
-                        <p>
+                        <!--<p>
                             Мощный. Простой в использовании. Универсальный и доступный. Создан специально для ваших любимых занятий. Работайте, играйте, творите, учитесь, общайтесь и делайте множество других дел.
-                        </p>
+                        </p>-->
+                        <p>{{description}}</p>
                         <div class="row">
                             <div class="col-6">
-                                <h3>100500 ₽</h3>
+                                <!--<h3>100500 ₽</h3>-->
+                                <h3>{{price}} ₽</h3>
                             </div>
                             <div class="col-6">
                                 <button type="button" class="btn btn-success float-end buy">Купить</button>
