--- a/views/macbook.hbs
+++ b/views/macbook.hbs
@@ -11,7 +11,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="name">Apple MacBook Pro 16" 32 ГБ, 1 ТБ SSD, серебристый</h3>
+<!--                        <h3 class="name">Apple MacBook Pro 16" 32 ГБ, 1 ТБ SSD, серебристый</h3>-->
+                        <h3 class="name">{{name}}</h3>
                     </div>
                 </div>
                 <div class="row gy-3 justify-content-center">
@@ -20,11 +21,13 @@
                     </div>
                     <div class="col-xl-6 col-12 text-phone row flex-column justify-content-between p-3 gy-3">
                         <p>
-                            Суперсила профессионалов. Супербыстрые чипы M1 Pro и M1 Max дают феноменальную производительность и обеспечивают удивительно долгое время работы без подзарядки. Прибавьте к этому потрясающий дисплей Liquid Retina XDR и ещё больше портов для профессиональной работы. Это тот самый ноутбук, который вы так ждали.
+<!--                            Суперсила профессионалов. Супербыстрые чипы M1 Pro и M1 Max дают феноменальную производительность и обеспечивают удивительно долгое время работы без подзарядки. Прибавьте к этому потрясающий дисплей Liquid Retina XDR и ещё больше портов для профессиональной работы. Это тот самый ноутбук, который вы так ждали.-->
+                            {{description}}
                         </p>
                         <div class="row">
                             <div class="col-6">
-                                <h3>100500 ₽</h3>
+<!--                                <h3>100500 ₽</h3>-->
+                                <h3>{{price}} ₽</h3>
                             </div>
                             <div class="col-6">
                                 <button type="button" class="btn btn-success float-end buy">Купить</button>
