--- a/views/partials/menu_items.hbs
+++ b/views/partials/menu_items.hbs
@@ -11,4 +11,7 @@
     <li class="nav-item">
         <a class="nav-link" aria-current="page" href="watch"><span class="device">Аксессуары</span></a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="chat.html"><span class="device">Чат</span></a>
+    </li>
 </ul>
